--- a/config/locales/en/views/devise.en.yml
+++ b/config/locales/en/views/devise.en.yml
@@ -44,4 +44,36 @@ en:
       gender: "Gender"
       email: "Email"
       password: "Password"
-      remember_me: "Remember me" 
+      remember_me: "Remember me"
+    confirmations:
+      new:
+        title: "Resend confirmation instructions"
+        resend_instructions: "Resend confirmation instructions"
+        back_to_sign_in: "Back to sign in"
+    mailer:
+      confirmation_instructions:
+        subject: "Confirmation instructions"
+        greeting: "Welcome %{recipient}!"
+        instruction: "You can confirm your account email through the link below:"
+        action: "Confirm my account"
+      reset_password_instructions:
+        subject: "Reset password instructions"
+        greeting: "Hello %{recipient}!"
+        instruction: "Someone has requested a link to change your password. You can do this through the link below."
+        action: "Change my password"
+        instruction_2: "If you didn't request this, please ignore this email."
+        instruction_3: "Your password won't change until you access the link above and create a new one."
+      unlock_instructions:
+        subject: "Unlock instructions"
+        greeting: "Hello %{recipient}!"
+        instruction: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+        instruction_2: "Click the link below to unlock your account:"
+        action: "Unlock my account"
+      email_changed:
+        subject: "Email Changed"
+        greeting: "Hello %{recipient}!"
+        message: "We're contacting you to notify you that your email is being changed to %{email}."
+      password_change:
+        subject: "Password Changed"
+        greeting: "Hello %{recipient}!"
+        message: "We're contacting you to notify you that your password has been changed." 
