--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,8 @@
 
 en:
   hello: "Hello world"
+  
+  # Common confirmation dialogs
+  common:
+    are_you_sure: "Are you sure?"
+    confirm_delete: "Are you sure? This action cannot be undone."
