Grand admin privileges functionality added.

--- a/config/locales/de/views/shared.de.yml
+++ b/config/locales/de/views/shared.de.yml
@@ -10,6 +10,15 @@ de:
       reports: "Berichte"
       your_teams: "Deine Teams"
       settings: "Einstellungen"
+      development: "Entwicklung"
+      dev_tools: "Entwicklertools"
+      debug: "Fehlersuche"
+      admin_role: "Admin-Rolle (Aktuell)"
+      user_role: "Benutzer-Rolle (Aktuell)"
+      switch_to_admin: "Zu Admin-Rolle wechseln"
+      switch_to_user: "Zu Benutzer-Rolle wechseln"
+      become_admin: "Admin werden"
+      become_user: "Benutzer werden"
     profile_dropdown:
       your_profile: "Dein Profil"
       sign_out: "Abmelden"
