--- a/config/locales/en/views/shared.en.yml
+++ b/config/locales/en/views/shared.en.yml
@@ -10,6 +10,15 @@ en:
       reports: "Reports"
       your_teams: "Your teams"
       settings: "Settings"
+      development: "Development"
+      dev_tools: "Developer Tools"
+      debug: "Debug"
+      admin_role: "Admin Role (Current)"
+      user_role: "User Role (Current)"
+      switch_to_admin: "Switch to Admin Role"
+      switch_to_user: "Switch to User Role"
+      become_admin: "Become Admin"
+      become_user: "Become User"
     profile_dropdown:
       your_profile: "Your profile"
       sign_out: "Sign out"
