--- a/config/locales/en/views/prompts.en.yml
+++ b/config/locales/en/views/prompts.en.yml
@@ -46,6 +46,7 @@ en:
       model_info: "%{size}GB model by %{creator}"
       waiting_in_queue: "This request is waiting in the queue. Check back soon for results."
       processing_message: "This request is currently being processed. Check back soon for results."
+      last_updated: "Last updated"
       status:
         queued: "In Queue"
         processing: "Processing"
